# 3091-S2-2021

./: .gitmodules  README.md  permissions.sh
ball_detection/: ball_detection.py
comms/: CMakeLists.txt
comms/arduino_sensors/: arduino_sensors.ino
comms/launch/: comms.launch
comms/nodes/: Rate  encoder  republisher
comms/src/comms/: Ultrasonics.py
control/: CMakeLists.txt  package.xml  setup.py
control/launch/: comms.launch
control/nodes/: controller
control/src/control/: Move.py
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: comms.pc  diff_drive.pc
devel/lib/python3/dist-packages/comms/: __init__.py
devel/lib/python3/dist-packages/diff_drive/: __init__.py
devel/share/comms/cmake/: commsConfig.cmake
devel/share/diff_drive/cmake/: diff_drive-msg-extras.cmake  diff_drive-msg-paths.cmake  diff_driveConfig.cmake
devel/share/gennodejs/ros/diff_drive/msg/: _index.js
devel/share/roseus/ros/diff_drive/: manifest.l
src/comms/: CMakeLists.txt  package.xml
src/comms/arduino_sensors/: arduino_sensors.ino
src/comms/launch/: comms.launch
src/comms/nodes/: encoder  republisher
src/comms/src/comms/: Ticks.py  Ultrasonics.py
vision/: CMakeLists.txt  package.xml  setup.py
vision/launch/: vision.launch
vision/nodes/: ball_detect
