<?xml version="1.0"?>
<package format="2">
  <name>vision</name>
  <version>1.0.0</version>
  <description>

    This package is responsible for detection of steel bearings as well as their non-metric distance 	from the centre of the image frame
  
  </description>
  <maintainer email="surya.kannan@icloud.com">Surya Kannan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>

</package>
