<?xml version="1.0"?>
<package format="2">
  <name>comms</name>
  <version>1.0.0</version>
  <description>

    This package interfaces the Jetson Nano with an Arduino using i2c and publishes ROS 
    sensor_msgs
  
  </description>
  <maintainer email="surya.kannan@icloud.com">Surya Kannan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
